--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,3 +1,8 @@
+level:
+  ROOT: ERROR
+  org.springframework.web: ERROR
+  liquibase: INFO
+
 spring:
   profiles:
     active: "prod"
@@ -8,28 +13,24 @@ spring:
     password: password
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
-
-level:
-  ROOT: ERROR
-  org.springframework.web: ERROR
-  liquibase: INFO
-
-okta:
-  oauth2:
-    issuer: https://dev-958433.okta.com/oauth2/default
-    client-id: 0oa4u7s7jowBgKy6W4x6
-    client-secret: udX0cFsj3UsCznuiFbmE1M04U3_aEVIgSPdmgCL1
-
-security:
-  oauth2:
-    client:
-      accessTokenUri: https://dev-958433.okta.com/oauth2/default/v1/token
-      userAuthorizationUri: https://dev-958433.okta.com/oauth2/default/v1/authorize
-      clientId: 0oa4u7s7jowBgKy6W4x6
-      clientSecret: udX0cFsj3UsCznuiFbmE1M04U3_aEVIgSPdmgCL1
-      scope: openid profile email groups
-    resource:
-      userInfoUri: https://dev-958433.okta.com/oauth2/default/v1/userinfo
+  security:
+    oauth2:
+      client:
+        registration:
+          okta:
+            client-id: 0oa4u7s7jowBgKy6W4x6
+            client-secret: udX0cFsj3UsCznuiFbmE1M04U3_aEVIgSPdmgCL1
+        provider:
+          okta:
+            issuerUri: https://dev-958433.okta.com/oauth2/default
+            authorization-uri: https://dev-958433.okta.com/oauth2/default/v1/authorize
+            token-uri: https://dev-958433.okta.com/oauth2/default/v1/token
+            user-info-uri: https://dev-958433.okta.com/oauth2/default/v1/userinfo
+            jwk-set-uri: https://dev-958433.okta.com/oauth2/default/v1/keys
+            user-name-attribute: sub
+      resourceserver:
+        jwt:
+          issuer-uri: https://dev-958433.okta.com/oauth2/default
 
 eureka:
   instance:
@@ -37,3 +38,15 @@ eureka:
   client:
     service-url:
       defaultZone: http://admin:${shc.registry.password}@localhost:8761/eureka
+
+shc:
+  oauth2:
+    client:
+      registration:
+        registrationId: 0oa4u7s7jowBgKy6W4x6
+        accessTokenUri: https://dev-958433.okta.com/oauth2/default/v1/token
+        userAuthorizationUri: https://dev-958433.okta.com/oauth2/default/v1/authorize
+        clientId: 0oa4u7s7jowBgKy6W4x6
+        clientSecret: udX0cFsj3UsCznuiFbmE1M04U3_aEVIgSPdmgCL1
+        scope: openid profile email groups
+        userInfoUri: https://dev-958433.okta.com/oauth2/default/v1/userinfo
