Implement config server and authentication rules

--- a/src/main/resources/bootstrap-prod.yml
+++ b/src/main/resources/bootstrap-prod.yml
@@ -10,7 +10,7 @@ spring:
   application:
     name: service-provider-api
   profiles:
-    active: prod,git
+    active: prod,native
   cloud:
     config:
       uri: http://admin:${shc.registry.password}@localhost:8761/config
